# Premier-Stats

./: .gitignore  README.md
.github/workflows/: etl-pipeline.yaml
data_pipeline/: main.py  pyproject.toml
data_pipeline/db/: engine.py
data_pipeline/scrapers/: constants.py  fbref.py  league_table.py  players_info.py  sofascore.py  top_scorers.py  understat.py
data_pipeline/transform/: mapper.py  players.py  standings.py
data_pipeline/utils/: constants.py  df_helpers.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.jsx  PlayerStats.jsx  Players.jsx  index.css  main.jsx
frontend/src/api/: services.js
frontend/src/components/: ButtonCard.jsx  FilterSelect.jsx  PageHeader.jsx  PlayerProfileCard.jsx  PlayerTable.jsx  SectionHeader.jsx  StandingTable.jsx  StatsCard.jsx  player_table.jsx  premier_table.jsx  static_table.jsx  stats_card.jsx
frontend/src/constants/: playerStatsByPosition.js  playerStatsConfig.js  playersPositions.js
frontend/src/hooks/: useDebounce.js  useHomeStats.js  usePlayerByID.js  usePlayers.js  useStandings.js  useTeams.js  useTopStats.js
