[project]
name = "premier-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "3dw1n123",email = "77713206+3dw1n123@users.noreply.github.com"}
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "soccerdata (>=1.8.8,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
