[project]
name = "premier-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "3dw1n123",email = "77713206+3dw1n123@users.noreply.github.com"}
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "soccerdata (>=1.8.8,<2.0.0)",
    "supabase (>=2.28.3,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "rapidfuzz (>=3.14.5,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false